samples/_failures_safe/1761465717_8b6818_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_85ce6e71.c: In function ‘main’:
./samples/SAFE/__tmp_85ce6e71.c:156:13: error: expected declaration or statement at end of input
  156 |             case 2:
      |             ^~~~
./samples/SAFE/__tmp_85ce6e71.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_85ce6e71.c:156:13: error: expected declaration or statement at end of input
